# langchain-opendataloader-pdf

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml  sync-upstream.yml  test-full.yml  test.yml
docs/: document_loaders.ipynb  provider.ipynb  text_embedding.ipynb  toolkits.ipynb  vectorstores.ipynb
docs/plans/: 2026-04-02-pre-release-checklist-design.md
docs/superpowers/plans/: 2026-03-16-hybrid-mode-integration.md
docs/superpowers/specs/: 2026-03-16-hybrid-mode-integration-design.md
langchain_opendataloader_pdf/: __init__.py  document_loaders.py  retrievers.py  toolkits.py  tools.py
tests/: conftest.py  test_document_loader.py  test_document_loaders.py  test_e2e_hybrid.py  test_integration.py  test_regression.py
tests/integration_tests/: test_chat_models.py  test_embeddings.py  test_retrievers.py  test_tools.py  test_vectorstores.py
tests/snapshots/: lorem_json.json  lorem_text.txt  test_load_as_json_chunks.json  test_load_as_raw_text.json
tests/unit_tests/: test_chat_models.py  test_embeddings.py  test_tools.py
