[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "langchain-opendataloader-pdf"
version = "0.0.0"
description = "A LangChain integration for OpenDataLoader PDF"
readme = "README.md"
license = "MIT"
authors = [{ name = "opendataloader-project", email = "open.dataloader@hancom.com" }]
keywords = ["langchain", "dataloader", "pdf", "document loader", "ai", "document-parsing", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core>=1.0,<2.0",
    "opendataloader-pdf>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/opendataloader-project/opendataloader-pdf"
Repository = "https://github.com/opendataloader-project/langchain-opendataloader-pdf"
Issues = "https://github.com/opendataloader-project/langchain-opendataloader-pdf/issues"
